SERVER-58433 Removing multi writes from multi statement transactions from Resharding Coordinator Service